[package]
name = "party-building-system-back-end"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
tokio = { version = "1.48.0", features = ["full"] }
thiserror = "2.0.17"
sqlx = { version = "0.9.0-alpha.1", features = ["runtime-tokio", "postgres", "macros"] }
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }